# news-articles-classifier

./: .gitignore  NLP Text Classifier_Colab_Notebook  README.md  main.ipynb  news-classifier11.ipynb  news_classifier_embeddings.ipynb  pyproject.toml  testing_data_lowercase_results.csv
